Rejigged the code to wrap similar views #20
Views that logically sit together are being collected under a hierarchy
to make it easier to switch between them.

--- a/app/default/templates/default.html
+++ b/app/default/templates/default.html
@@ -1,6 +1,7 @@
 <div class="jumbotron">
-  <h1 class="header">Reps</h1>
-  <p class="lead">Track your workouts</p>
+  <h1 class="header">Track your workouts</h1>
+  <p class="lead">A simple app to track your gym sessions</p>
+  <p>Record, report, remember.</p>
   <a href="login" class="btn btn-primary btn-lg login-button">
     Get Started
   </a>
