--- a/app/default/templates/register.html
+++ b/app/default/templates/register.html
@@ -1,7 +1,7 @@
 <div class="col-md-6 col-md-offset-3">
-  <div class="panel panel-primary">
+  <div class="panel panel-success">
     <div class="panel-heading">
-      Login
+      Create a New Account
     </div>
     <form class="form-horizontal" action="" method="post">
       <div class="panel-body">
@@ -18,16 +18,16 @@
           </label>
           <div class="col-lg-10">
             <input type="password" class="form-control" id="login-password"
-              name="password" placeholder="Your password" required>
+              name="password" placeholder="Create a password" required>
           </div>
         </div>
       </div>
       <div class="panel-footer clearfix">
         <div class="pull-left">
-          <a href="register" class="btn btn-link register-button">Register</a>
+          <a href="login" class="btn btn-link login-button">Login</a>
         </div>
         <div class="pull-right">
-          <button class="btn btn-primary">Login</button>
+          <button class="btn btn-success">Sign Up</button>
         </div>
       </div>
     </form>
