Store the logged in user #23

--- a/app/default/templates/register.html
+++ b/app/default/templates/register.html
@@ -6,36 +6,36 @@
     <form class="form-horizontal" action="" method="post">
       <div class="panel-body">
         <div class="form-group">
-          <label for="register-first_name" class="col-lg-2 control-label">
+          <label for="register-first_name" class="col-lg-3 control-label">
             Your First Name
           </label>
-          <div class="col-lg-10">
+          <div class="col-lg-9">
             <input type="text" class="form-control" id="register-first_name"
               name="first_name" placeholder="John">
           </div>
         </div>
         <div class="form-group">
-          <label for="register-last_name" class="col-lg-2 control-label">
+          <label for="register-last_name" class="col-lg-3 control-label">
             Your Last Name
           </label>
-          <div class="col-lg-10">
+          <div class="col-lg-9">
             <input type="text" class="form-control" id="register-last_name"
               name="last_name" placeholder="Smith">
           </div>
         </div>
 
         <div class="form-group">
-          <label for="register-email" class="col-lg-2 control-label">Email</label>
-          <div class="col-lg-10">
+          <label for="register-email" class="col-lg-3 control-label">Email</label>
+          <div class="col-lg-9">
             <input type="email" class="form-control" id="register-email"
               name="email" placeholder="me@gmail.com" required>
           </div>
         </div>
         <div class="form-group">
-          <label for="register-password" class="col-lg-2 control-label">
+          <label for="register-password" class="col-lg-3 control-label">
             Password
           </label>
-          <div class="col-lg-10">
+          <div class="col-lg-9">
             <input type="password" class="form-control" id="register-password"
               name="password" placeholder="Create a password" required>
           </div>
@@ -43,7 +43,7 @@
       </div>
       <div class="panel-footer clearfix">
         <div class="pull-left">
-          <a href="login" class="btn btn-link register-button">Login</a>
+          <a href="login" class="btn btn-link login-button">Login</a>
         </div>
         <div class="pull-right">
           <button class="btn btn-success">Sign Up</button>
