--- a/app/workouts/templates/workout/item.html
+++ b/app/workouts/templates/workout/item.html
@@ -1,3 +1,8 @@
 <div class="panel panel-<%- iterType %>">
-
+  <div class="panel-heading">
+    Date: <%- workout_date %>
+  </div>
+  <div class="panel-body">
+    <%- Location.name %>
+  </div>
 </div>
