--- a/app/workouts/templates/workout/layout.html
+++ b/app/workouts/templates/workout/layout.html
@@ -1,9 +1,14 @@
 <div class="row">
-  <a href="/workouts/create" class="btn btn-success btn-block create-workout">
-    <i class="glyphicon glyphicon-plus"></i>
-    Start Session
-  </a>
+  <div class="col-lg-12 col-md-12">
+    <a href="/workouts/create" class="btn btn-success btn-block create-workout">
+      <i class="glyphicon glyphicon-plus"></i>
+      Start Session
+    </a>
+  </div>
 </div>
+
+<hr />
+
 <div class="row list-hook">
 
 </div>
