Simple display workout detail w/ date #25

--- a/app/workouts/templates/workout/item.html
+++ b/app/workouts/templates/workout/item.html
@@ -1,6 +1,6 @@
 <div class="panel panel-<%- iterType %>">
   <div class="panel-heading">
-    Date: <%- workout_date %>
+    Session completed <%- formattedDate() %>
   </div>
   <div class="panel-body">
     <%- Location.name %>
