A simple add a session with a date #26
Add a session with a date. I’ve made the location optional for now -
I’m not entirely convinced it’s necessary for users of the app.

--- a/app/workouts/templates/workout/item.html
+++ b/app/workouts/templates/workout/item.html
@@ -3,6 +3,6 @@
     Session completed <%- formattedDate() %>
   </div>
   <div class="panel-body">
-    <%- Location.name %>
+    <%- location %>
   </div>
 </div>
