Start recording sets against a workout #28
Started throwing together the sets for a workout. Not entirely sure how
to handle exercises yet but it might be a case of throwing the raw data
in and trying to fix it up after the fact.

--- a/app/workouts/templates/create/layout.html
+++ b/app/workouts/templates/create/layout.html
@@ -1,22 +1,29 @@
-<div class="row">
+<form class="form-horizontal workout-form" action="" method="post">
+  <div class="row">
+    <div class="col-sm-6 col-xs-6 col-md-3">
+      <button type="button" class="btn btn-block btn-default cancel-create">
+        Cancel
+      </button>
+    </div>
+    <div class="hidden-sm col-md-6"></div>
+    <div class="col-sm-6 col-xs-6 col-md-3">
+      <button type="submit" class="btn btn-block btn-success">
+        Done
+      </button>
+    </div>
+  </div>
 
-  <div class="col-sm-6 col-xs-6 col-md-3">
-    <button type="button" class="btn btn-block btn-default cancel-create">
-      Cancel
-    </button>
-  </div>
-  <div class="hidden-sm col-md-6"></div>
-  <div class="col-sm-6 col-xs-6 col-md-3">
-    <button type="submit" class="btn btn-block btn-success">
-      Done
-    </button>
-  </div>
-</div>
+  <hr />
 
-<div class="col-md-6 col-sm-12">
-  <div class="form-group">
-    <label class="control-label" for="id_workout_date">Workout Date</label>
-    <input class="form-control" id="id_workout_date" type="date"
-    name="workout_date" value="<%- workout_date %>">
+  <div class="col-md-6 col-sm-12">
+    <div class="form-group">
+      <label class="control-label col-lg-2" for="id_workout_date">Date</label>
+      <div class="col-lg-10">
+        <input class="form-control" id="id_workout_date" type="date"
+          name="workout_date" value="<%- workout_date %>">
+      </div>
+    </div>
   </div>
-</div>
+</form>
+
+<div class="set-hook col-md-6 col-sm-12"></div>
