--- a/app/workouts/templates/create/layout.html
+++ b/app/workouts/templates/create/layout.html
@@ -1,21 +1,22 @@
-<form class="form-horizontal workout-form" action="" method="post">
-  <div class="row">
-    <div class="col-sm-6 col-xs-6 col-md-3">
-      <button type="button" class="btn btn-block btn-default cancel-create">
-        Cancel
-      </button>
-    </div>
-    <div class="hidden-sm col-md-6"></div>
-    <div class="col-sm-6 col-xs-6 col-md-3">
-      <button type="submit" class="btn btn-block btn-success">
-        Done
-      </button>
-    </div>
+<div class="row">
+  <div class="col-sm-6 col-xs-6 col-md-3">
+    <button type="button" class="btn btn-block btn-default cancel-create">
+      Cancel
+    </button>
   </div>
+  <div class="hidden-sm col-md-6"></div>
+  <div class="col-sm-6 col-xs-6 col-md-3">
+    <button type="submit" class="btn btn-block btn-success">
+      Done
+    </button>
+  </div>
+</div>
 
-  <hr />
+<hr>
 
-  <div class="col-md-6 col-sm-12">
+<div class="col-md-6 col-sm-12">
+  <div class="form-horizontal">
+
     <div class="form-group">
       <label class="control-label col-lg-2" for="id_workout_date">Date</label>
       <div class="col-lg-10">
@@ -23,7 +24,12 @@
           name="workout_date" value="<%- workout_date %>">
       </div>
     </div>
-  </div>
-</form>
 
-<div class="set-hook col-md-6 col-sm-12"></div>
+    <hr>
+
+    <div class="setform-hook"></div>
+  </div>
+
+</div>
+
+<div class="setlist-hook col-md-6 col-sm-12"></div>
