End to end create workout in place #26

--- a/app/workouts/templates/create/layout.html
+++ b/app/workouts/templates/create/layout.html
@@ -6,7 +6,7 @@
   </div>
   <div class="hidden-sm col-md-6"></div>
   <div class="col-sm-6 col-xs-6 col-md-3">
-    <button type="submit" class="btn btn-block btn-success">
+    <button type="submit" class="btn btn-block btn-success save-workout">
       Done
     </button>
   </div>
