Better date format

--- a/app/templates/nav.html
+++ b/app/templates/nav.html
@@ -1,3 +1,3 @@
 <div class="navbar-header">
-  <a class="navbar-brand go-home" href="/">Reps</a>
+  <a class="navbar-brand go-home" href="/">PUMP3D</a>
 </div>
