--- a/app/workouts/templates/workout/detail.html
+++ b/app/workouts/templates/workout/detail.html
@@ -1,1 +1,5 @@
-<h1>Workout date: <%- formattedDate %></h1>
+<div class="page-header">
+  <h1>Workout date: <small><%- formattedDate %></small></h1>
+</div>
+
+<div class="exercise-list-hook"></div>
