--- a/app/workouts/templates/workout/detail.html
+++ b/app/workouts/templates/workout/detail.html
@@ -1,5 +1,8 @@
 <div class="page-header">
-  <h1>Workout date: <small><%- formattedDate %></small></h1>
+  <h1 class="clearfix">
+    <span class="hidden-xs">Workout date:</span> <%- formattedDate %>
+    <small class="pull-right"><a href="/workout/" class="btn btn-link">Go Back</a></small>
+  </h1>
 </div>
 
 <div class="exercise-list-hook"></div>
