Added the font set

--- a/app/workouts/templates/create/layout.html
+++ b/app/workouts/templates/create/layout.html
@@ -1,12 +1,14 @@
 <div class="row">
   <div class="col-sm-6 col-xs-6 col-md-3">
     <button type="button" class="btn btn-block btn-default cancel-create">
+      <i class="glyphicon glyphicon-menu-left"></i>
       Cancel
     </button>
   </div>
   <div class="hidden-sm col-md-6"></div>
   <div class="col-sm-6 col-xs-6 col-md-3">
     <button type="submit" class="btn btn-block btn-success save-workout">
+      <i class="glyphicon glyphicon-ok"></i>
       Done
     </button>
   </div>
