--- a/app/workouts/templates/workout/detail.html
+++ b/app/workouts/templates/workout/detail.html
@@ -1,7 +1,12 @@
 <div class="page-header">
   <h1 class="clearfix">
     <span class="hidden-xs">Workout date:</span> <%- formattedDate %>
-    <small class="pull-right"><a href="/workout/" class="btn btn-link">Go Back</a></small>
+    <small class="pull-right">
+      <a href="/workout/" class="btn btn-link">
+        <i class="glyphicon glyphicon-menu-left"></i>
+        Go Back
+      </a>
+    </small>
   </h1>
 </div>
 
