Render the list ordered by workout date #41
Order the list by workout_date with the newest at the top and in nice,
large text to help the user find their latest workout

--- a/app/exercises/templates/exercises/set.html
+++ b/app/exercises/templates/exercises/set.html
@@ -1,1 +1,10 @@
-<%- weight %> <%- reps %> Reps
+<% if (isFirstDate(workout_date)) { %>
+  <h4 class="list-group-item-header">
+    <%- weight %>
+    <span class="pull-right"><%- reps %> Reps</span>
+  </h4>
+  <p class="list-group-item-text">On <%- formatDate(workout_date) %></p>
+<% } else { %>
+  <span class="badge badge-info"><%- weight %></span>
+  <%- reps %> Reps (<%- formatDate(workout_date) %>)
+<% } %>
