--- a/app/exercises/templates/exercises/layout.html
+++ b/app/exercises/templates/exercises/layout.html
@@ -8,7 +8,7 @@
           </label>
           <div class="col-lg-10 col-xs-12">
             <input type="search" name="exercise_name" value=""
-              class="form-control" placeholder="Search exercises"
+              class="form-control exercise_name" placeholder="Search exercises"
               id="id_exercise_name">
           </div>
         </div>
