--- a/app/default/templates/default.html
+++ b/app/default/templates/default.html
@@ -1,7 +1,21 @@
 <div class="jumbotron">
-  <h1 class="header">Track your workouts</h1>
-  <p class="lead">A simple app to track your gym sessions</p>
-  <p>Record, report, remember.</p>
+  <h1 class="header">Get Pumped and Make Gains</h1>
+  <div class="row">
+    <div class="col-md-6">
+      <p>Record, Recall, Report</p>
+      <p>
+        There's nothing more annoying than trying to remember your last session in
+        the gym when all you want to do is get a sick pump.
+      </p>
+      <p>
+        Getting huge is as simple as lifting heavier weights each time you hit the
+        gym.
+      </p>
+    </div>
+    <div class="col-md-6">
+      <img src="/img/last-workout.png" style="width: 100%">
+    </div>
+  </div>
   <a href="login" class="btn btn-primary btn-lg login-button">
     Get Started
   </a>
