Link to the create from #41

--- a/app/exercises/templates/exercises/layout.html
+++ b/app/exercises/templates/exercises/layout.html
@@ -1,9 +1,8 @@
 <div class="row">
-  <div class="col-md-12 col-lg-10 col-lg-offset-1">
+  <div class="col-md-10">
     <form class="form-horizontal" action="" method="get">
-      <div class="col-md-12">
         <div class="form-group">
-          <label for="id_exercise_name" class="col-lg-2 hidden-xs">
+          <label for="id_exercise_name" class="col-lg-2 hidden-xs control-label">
             Find your exercise
           </label>
           <div class="col-lg-10 col-xs-12">
@@ -12,8 +11,13 @@
               id="id_exercise_name">
           </div>
         </div>
-      </div>
     </form>
+  </div>
+  <div class="col-md-2">
+    <a href="/workout/create" class="start-session btn btn-link">
+      <i class="glyphicon glyphicon-plus"></i>
+      Start Session
+    </a>
   </div>
 </div>
 
