--- a/app/exercises/templates/exercises/set.html
+++ b/app/exercises/templates/exercises/set.html
@@ -3,8 +3,8 @@
     <%- weight %>
     <span class="pull-right"><%- reps %> Reps</span>
   </h4>
-  <p class="list-group-item-text">On <%- formatDate(workout_date) %></p>
+  <p class="list-group-item-text"><%- formatDate() %></p>
 <% } else { %>
   <span class="badge badge-info"><%- weight %></span>
-  <%- reps %> Reps (<%- formatDate(workout_date) %>)
+  <%- reps %> Reps (<%- formatDate() %>)
 <% } %>
