Added nav at the top #28

--- a/app/templates/nav.html
+++ b/app/templates/nav.html
@@ -1,3 +1,13 @@
 <div class="navbar-header">
-  <a class="navbar-brand go-home" href="/">PUMP3D</a>
+  <a class="navbar-brand go-home col-xs-4" href="/">PUMP3D</a>
+  <p class="navbar-text col-xs-4 visible-xs-inline-block">
+    <a href="/exercise/" class="exercise">Exercises</a>
+  </p>
+  <p class="navbar-text col-xs-4 visible-xs-inline-block">
+    <a href="/workout/" class="workout">Workouts</a>
+  </p>
 </div>
+<ul class="nav navbar-nav hidden-xs">
+  <li><a href="/exercise/" class="exercise">Exercises</a></li>
+  <li><a href="/workout/" class="workout">Workouts</a></li>
+</ul>
