--- a/app/workouts/templates/workout/detail.html
+++ b/app/workouts/templates/workout/detail.html
@@ -6,6 +6,10 @@
         <i class="glyphicon glyphicon-menu-left"></i>
         Go Back
       </a>
+      <a href="<%- editUrl %>" class="btn btn-primary">
+        <i class="glyphicon glyphicon-pencil"></i>
+        Edit
+      </a>
     </small>
   </h1>
 </div>
