--- a/app/workouts/templates/workout/layout.html
+++ b/app/workouts/templates/workout/layout.html
@@ -1,12 +1,1 @@
-<div class="row">
-  <div class="col-lg-12 col-md-12">
-    <a href="/workouts/create" class="btn btn-clear btn-block btn-lg create-workout">
-      <i class="glyphicon glyphicon-plus"></i>
-      Start Session
-    </a>
-  </div>
-</div>
-
-<hr />
-
-<div class="row list-hook"></div>
+<div class="list-hook"></div>
