--- a/app/workouts/templates/create/setform.html
+++ b/app/workouts/templates/create/setform.html
@@ -5,20 +5,26 @@
       name="exercise_name" value="<%- exercise_name %>">
   </div>
 </div>
-<div class="form-group">
-  <label class="control-label col-lg-2" for="id_weight">Weight</label>
-  <div class="col-lg-10">
-    <input class="form-control" id="id_weight" type="text"
-      name="weight" value="<%- weight %>">
+<div class="col-xs-6 col-lg-8">
+  <div class="row">
+    <div class="form-group">
+      <label class="control-label col-lg-3" for="id_weight">Weight</label>
+      <div class="col-lg-8">
+        <input class="form-control" id="id_weight" type="text"
+        name="weight" value="<%- weight %>">
+      </div>
+    </div>
   </div>
-</div>
-<div class="form-group">
-  <label class="control-label col-lg-2" for="id_reps">Reps</label>
-  <div class="col-lg-10">
-    <input class="form-control" id="id_reps" type="number"
-    min="0" step="1" name="reps" value="<%- reps %>">
+  <div class="row">
+    <div class="form-group">
+      <label class="control-label col-lg-3" for="id_reps">Reps</label>
+      <div class="col-lg-8">
+        <input class="form-control" id="id_reps" type="number"
+        min="0" step="1" name="reps" value="<%- reps %>">
+      </div>
+    </div>
   </div>
-</div>
+  </div>
 <button class="btn btn-block btn-primary">
   <i class="glyphicon glyphicon-plus"></i>
   Add Set
