Show the previous workout #50
A nice little widget that shows the previous instance of that
exercise’s workout.

--- a/app/workouts/templates/create/setform.html
+++ b/app/workouts/templates/create/setform.html
@@ -24,7 +24,10 @@
       </div>
     </div>
   </div>
-  </div>
+</div>
+
+<div class="col-xs-6 col-lg-4 previous-exercise-hook"></div>
+
 <button class="btn btn-block btn-primary">
   <i class="glyphicon glyphicon-plus"></i>
   Add Set
