Fixed the import and disabled workout_date #61

--- a/app/workouts/templates/create/layout.html
+++ b/app/workouts/templates/create/layout.html
@@ -22,7 +22,7 @@
     <div class="form-group">
       <label class="control-label col-lg-2" for="id_workout_date">Date</label>
       <div class="col-lg-10">
-        <input class="form-control" id="id_workout_date" type="date"
+        <input class="form-control" id="id_workout_date" type="date" disabled
           name="workout_date" value="<%- workout_date %>">
       </div>
     </div>
