Some refactors to greatly reduce network latency

--- a/app/workouts/templates/workout/detail.html
+++ b/app/workouts/templates/workout/detail.html
@@ -2,11 +2,11 @@
   <h1 class="clearfix">
     <span class="hidden-xs">Workout date:</span> <%- formattedDate %>
     <small class="pull-right">
-      <a href="/workout/" class="btn btn-link">
+      <a href="/workout/" class="btn btn-link go-back">
         <i class="glyphicon glyphicon-menu-left"></i>
         Go Back
       </a>
-      <a href="<%- editUrl %>" class="btn btn-primary">
+      <a href="<%- editUrl %>" class="btn btn-primary edit-workout">
         <i class="glyphicon glyphicon-pencil"></i>
         Edit
       </a>
