--- a/app/workouts/templates/workout/list.html
+++ b/app/workouts/templates/workout/list.html
@@ -1,6 +1,6 @@
 <div class="row">
   <div class="col-lg-12 col-md-12">
-    <a href="/workouts/create" class="btn btn-clear btn-block btn-lg create-workout">
+    <a href="/workout/create" class="btn btn-clear btn-block btn-lg create-workout">
       <i class="glyphicon glyphicon-plus"></i>
       Start Session
     </a>
