Render the User Profile template #65
Put the templates in place that we can use to change our User Profile

--- a/app/templates/nav.html
+++ b/app/templates/nav.html
@@ -18,7 +18,7 @@
   <li><a href="/workout/" class="authenticated workout">Workouts</a></li>
 </ul>
 <ul class="nav navbar-nav navbar-right hidden-xs">
-  <li><a href="/profile/" class="authenticated profile">
+  <li><a href="/profile" class="authenticated profile">
     My Profile
     <i class="glyphicon glyphicon-user"></i>
   </a></li>
