--- a/app/templates/nav.html
+++ b/app/templates/nav.html
@@ -7,7 +7,7 @@
     <a href="/workout/" class="authenticated workout">Workouts</a>
   </p>
   <p class="navbar-text col-xs-2 visible-xs-inline-block">
-    <a href="/logout" class="authenticated ogout">
+    <a href="/logout" class="authenticated logout">
       <i class="glyphicon glyphicon-off"></i>
     </a>
   </p>
