--- a/app/user/templates/layout.html
+++ b/app/user/templates/layout.html
@@ -57,7 +57,9 @@
         <button type="button" class="btn btn-danger undo">
           Undo Changes
         </button>
-        <button class="btn btn-success save-user">Update Details</button>
+        <button type="submit" class="btn btn-success save-user">
+          Update Details
+        </button>
       </div>
     </div>
   </div>
