Tweaks in the UI
Some tweaks in the UI and expiring the JWT for added security.

--- a/app/workouts/templates/set/panel.html
+++ b/app/workouts/templates/set/panel.html
@@ -1,4 +1,3 @@
 <h4 class="list-group-item-header">
-  <%- weight %>
+  <%- weight %> <span class="pull-right"><%- reps %> Reps</span>
 </h4>
-<p class="list-group-item-text"><%- reps %> Reps</p>
