Added the UI for changing password #66

--- a/app/user/templates/layout.html
+++ b/app/user/templates/layout.html
@@ -16,12 +16,13 @@
           <input class="form-control" id="id_password" type="password"
             value="disabled password" disabled>
         </div>
-        <a class="btn btn-warning col-lg-4">
+        <button class="btn btn-warning col-lg-4 show-password" type="button">
           Change Password
-        </a>
+        </button>
       </div>
     </div>
   </div>
+  <div class="change-password-hook"></div>
 
   <hr>
 
