Fixed the button in the exercise list #75

--- a/app/exercises/templates/exercises/layout.html
+++ b/app/exercises/templates/exercises/layout.html
@@ -13,12 +13,14 @@
         </div>
     </form>
   </div>
-  <div class="col-md-2">
-    <a href="/workout/create" class="start-session btn btn-link">
+  <div class="col-md-2 col-xs-12 col-sm-12">
+    <a href="/workout/create" class="start-session btn btn-block btn-success">
       <i class="glyphicon glyphicon-plus"></i>
       Start Session
     </a>
   </div>
 </div>
+
+<hr>
 
 <div class="row exercise-list-hook"></div>
