Re-do a set from the current session #63
Added a couple of hooks to make it easier to super-set. This works by
letting the user tap on an pre-run set to set its details in the form.

--- a/app/workouts/templates/create/set.html
+++ b/app/workouts/templates/create/set.html
@@ -1,2 +1,3 @@
 <span class="badge"><%- weight %></span>
+<span class="text-info"><i class="glyphicon glyphicon-plus"></i></span>
 <%- exercise_name %> &ndash; <%- reps %> Reps
