Display/Clear notifications #84
Setup the notification for token expiry

--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -1,2 +1,3 @@
 <nav class="navbar" id="nav"></nav>
+<div id="notification" class="container-fluid"></div>
 <div id="main" class="container-fluid"></div>
