Slightly better summary #94
Made a better summary for the workout list by naming a highlight.

Still need to figure out the best exercise and show that to the user.

--- a/app/workouts/templates/workout/item.html
+++ b/app/workouts/templates/workout/item.html
@@ -3,6 +3,7 @@
     Session completed <%- formattedDate() %>
   </div>
   <div class="panel-body">
-    <%- location %>
+    <h4>Highlight: <%- summary.exercise_name %></h4>
+    <p><%- summary.reps %> reps of <%- summary.weight %></p>
   </div>
 </div>
