I've put the pages backwards for some reason #98

--- a/app/base/templates/page.html
+++ b/app/base/templates/page.html
@@ -1,12 +1,12 @@
 <ul class="pagination">
    <li>
-     <a href="" aria-label="Previous" class="next-page">
-       <span aria-hidden="true">&laquo; next</span>
+     <a href="" aria-label="Previous" class="previous-page">
+       <span aria-hidden="true">&laquo; previous</span>
      </a>
    </li>
    <li>
-     <a href="" aria-label="Next" class="previous-page">
-       <span aria-hidden="true">previous &raquo;</span>
+     <a href="" aria-label="Next" class="next-page">
+       <span aria-hidden="true">next &raquo;</span>
      </a>
    </li>
  </ul>
