Added offline validation behaviours #109
Added a behaviour for handling offline validation and generalised out
the classes a little bit - we could use a different template if we
liked - though it would take a little more work to fit together.

--- a/app/base/templates/popover.html
+++ b/app/base/templates/popover.html
@@ -1,4 +1,4 @@
-<div class="popover bottom form-error" style="display:block;">
+<div class="popover bottom <%- popoverClass %>" style="display:block;">
   <div class="arrow"></div>
   <div class="popover-content">
     <%- content %>
