--- a/app/base/templates/popover.html
+++ b/app/base/templates/popover.html
@@ -1,4 +1,5 @@
-<div class="popover bottom <%- popoverClass %>" style="display:block;">
+<div class="popover bottom <%- popoverClass %>"
+    style="display:block;left:20px;top:20px;">
   <div class="arrow"></div>
   <div class="popover-content">
     <%- content %>
