Added links to link to Google #120
Added migrations and button so we can log into the Google Fit API -
this still needs to be configured.

--- a/app/user/templates/layout.html
+++ b/app/user/templates/layout.html
@@ -38,6 +38,12 @@
         </div>
       </div>
     </div>
+    <div class="col-lg-4">
+      <a class="btn" href="/me/google">
+        Connect your Google Fit Account
+        <img src="/img/google-logo.svg" width="33">
+      </a>
+    </div>
   </div>
   <div class="row">
     <div class="col-lg-4 col-lg-offset-2">
