Change the pages more easily #47

--- a/app/base/templates/page.html
+++ b/app/base/templates/page.html
@@ -1,10 +1,10 @@
 <ul class="pagination">
-   <li>
+   <li <% if (noPrev) { %>class="disabled"<% } %>>
      <a href="" aria-label="Previous" class="previous-page">
        <span aria-hidden="true">&laquo; previous</span>
      </a>
    </li>
-   <li>
+   <li <% if (noNext) { %>class="disabled"<% } %>>
      <a href="" aria-label="Next" class="next-page">
        <span aria-hidden="true">next &raquo;</span>
      </a>
